Fix various findbug violations